--- a/web-app-main/package.json
+++ b/web-app-main/package.json
@@ -10,6 +10,7 @@
     "@mdi/font": "6.2.95",
     "roboto-fontface": "*",
     "vue": "^3.4.21",
+    "vue-router": "^4.3.2",
     "vuetify": "^3.5.8"
   },
   "devDependencies": {
